--- a/grundlagen/package.json
+++ b/grundlagen/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "electron": "^23.1.1"
+  },
+  "dependencies": {
+    "@electron/remote": "^2.0.9"
   }
 }
